komp/db-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: db-svc
  name: db-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db-svc
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/komp-net-wp: "true"
        io.kompose.service: db-svc
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: wordpress
            - name: MYSQL_PASSWORD
              value: wordpress
            - name: MYSQL_ROOT_PASSWORD
              value: root
            - name: MYSQL_USER
              value: wordpress
          image: mariadb
          name: db-svc
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-data-mariadb
      restartPolicy: Always
      volumes:
        - name: db-data-mariadb
          persistentVolumeClaim:
            claimName: db-data-mariadb
status: {}
